k8s/apps/dev/gitea/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
        np-ingress-controller-web: allow
        np-mysql: allow
        np-internet: allow # to mirror repos
        np-internal: allow # for oidc
        np-metrics: allow
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:latest
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
              readOnly: false
            - mountPath: /data/gitea/packages
              name: registry-data
              readOnly: false
            - name: config
              readOnly: true
              mountPath: /data/gitea/conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: registry-data
          persistentVolumeClaim:
            claimName: gitea-registry-data
        - name: config
          secret:
            secretName: gitea-config
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: gitea
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
spec:
  entryPoints:
    - websecure
    - https-wan
  routes:
    - match: Host(`git.REDACTED`, `registry.REDACTED`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
  tls:
    secretName: REDACTED-cert
