k8s/apps/dev/gitea/policy.yaml
# allow gitea <-> runner
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitea-runner-in
spec:
  podSelector:
    matchLabels:
      app: gitea
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: gitea-runner
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitea-runner-out
spec:
  podSelector:
    matchLabels:
      app: gitea-runner
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev
      podSelector:
        matchLabels:
          app: gitea
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitea-matrixwh-out
spec:
  podSelector:
    matchLabels:
      app: gitea
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: services
        podSelector:
          matchLabels:
            app: matrix-webhook
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gitea-netbackup-in
spec:
  podSelector:
    matchLabels:
      app: gitea
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: storage
        podSelector:
          matchLabels:
            app: netbackup
